# redmine-wrapper-rs

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
ai_guides/leptos_guide/: 00-foreword.md  01-getting-started.md  02-view-syntax.md  03-components.md  04-reactivity.md  05-control-flow.md  06-forms-inputs.md  07-parent-child.md  08-async.md  09-routing.md  10-global-state.md  11-styling.md  12-metadata.md  13-js-interop.md  14-testing.md  15-ssr.md  16-server-functions.md  17-progressive-enhancement.md  18-islands.md  19-deployment.md  20-appendix-reactive-system.md  21-appendix-lifecycle.md
ai_guides/rust_guide/: 00-introduction.md  01-toolchain.md  02-fundamentals.md  03-ownership.md  04-structs-enums.md  05-collections.md  06-error-handling.md  07-generics-traits.md  08-closures-iterators.md  09-modules-crates.md  10-smart-pointers.md  11-concurrency.md  12-async.md  13-testing.md  14-unsafe-macros-ffi.md  15-cargo-deep.md  16-project-practical.md
ai_guides/sqlite_guide/: 01-intro.md  02-compilacao.md  03-api-c.md  04-ddl-datatypes.md  05-queries-otimizacao.md  06-seguranca.md  07-transacoes-wal.md  08-performance.md  09-manutencao.md  10-extensoes-vfs.md  11-fts5.md  12-migracao.md
conversations/: 20260714-09-24-50-Teste-manual-completo-para-não.md  20260714-13-22-47-Modernização-Rust-com-axum-tok.md
docs_api/: 00-redmine API.md  01-issues.md  02-projects.md  03-project-memberships.md  04-users.md  05-time-entries.md  06-news.md  07-issue-relations.md  08-versions.md  09-wiki-pages.md  10-queries.md  11-attachments.md  12-issue-statuses.md  13-trackers.md  14-enumerations.md  15-issue-categories.md  16-roles.md  17-groups.md  18-custom-fields.md  19-search.md  20-files.md  21-my-account.md  22-journals.md
examples/: check.rs  demo.rs
src/: lib.rs
src/client/: mod.rs  resources.rs
src/core/: config.rs  constants.rs  errors.rs  mod.rs
src/http/: client.rs  mod.rs  pagination.rs  rate_limiter.rs
tests/: client_test.rs  errors_test.rs  pagination_test.rs
wiki/: api-reference.md  getting-started.md  index.md  integration-guide.md  particularities.md  usage-guide.md
(+62 files in other folders)
