[package]
name = "redmine-wrapper-rs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Wrapper Rust tipado para a API REST do Redmine"
repository = "https://github.com/st-all-one/redmine-wrapper-rs"
keywords = ["redmine", "api", "rest", "wrapper"]
categories = ["api-bindings"]

[lib]
name = "redmine_wrapper"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
uuid = { version = "1", features = ["v7"] }
url = "2"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6"
