[package]
name = "redmine-wrapper-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "Wrapper Rust tipado para a API REST do Redmine"
repository = "https://github.com/st-all-one/redmine-wrapper-rs"
keywords = ["redmine", "api", "rest", "wrapper"]
categories = ["api-bindings"]

[lib]
name = "redmine_wrapper"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
wiremock = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
